# StudelyDesk

./: .pdm-python  Dockerfile  PKG-INFO  README.md  data.db  dev.env  init_db_script.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
k8s/: deploy.yaml
src/studelydesk/: db.py  models.py
src/studelydesk/views/: __init__.py  api.py  cli.py  web.py
src/studelydesk/views/static/: sheet.css  style.css
src/studelydesk/views/templates/: create.html  delete_ticket.html  get_ticket.html  getall_ticket.html  getstats.html  home.html  index.html  mes_tickets.html  navbar.html  update.html
tests/: test-app.py
